ERD.Core - Add CancellationToken async method and refactoring.

--- a/EquipmentRepairLog.Core/EquipmentRepairLog.Core.csproj
+++ b/EquipmentRepairLog.Core/EquipmentRepairLog.Core.csproj
@@ -6,6 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<WarningsAsErrors>Nullable</WarningsAsErrors>
+	<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+	<EnableNETAnalyzers>True</EnableNETAnalyzers>
   </PropertyGroup>
 
   <ItemGroup>
