ERD - Fixed bug and refactoring:  - Change validation user;  - Refactoring EquipmentService;  - Add test UserServiceTest.

--- a/EquipmentRepairDocument.Core/EquipmentRepairDocument.Core.csproj
+++ b/EquipmentRepairDocument.Core/EquipmentRepairDocument.Core.csproj
@@ -25,4 +25,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <EditorConfigFiles Remove="C:\Users\user\source\repos\EquipmentRepairDocument\EquipmentRepairDocument.Core\Service\Users\.editorconfig" />
+  </ItemGroup>
+
 </Project>
